fix(docs):Corrected misspelling.

--- a/org/DataAcquisitionWorkflows.org
+++ b/org/DataAcquisitionWorkflows.org
@@ -14,7 +14,7 @@
     - Quality
     - Missing data
   - Distributions
-- Ranomly generated
+- Randomly generated
   - Properties
   - Variable relationships
 ** Data manipulation
