--- a/org/DataAcquisitionWorkflows.org
+++ b/org/DataAcquisitionWorkflows.org
@@ -53,7 +53,7 @@
    - Each column is with Normal or Poisson distribution
    - The Normal distributions have means from -10 to 100
    - And standard deviations from 10% to 200%
-   - Make there are at least 20 column pairs that correlate
+   - Make sure there are at least 20 column pairs that correlate
 3. [ ] Fuel pumps data
    - Take time series data for company's fuel pumps
    - Transform the data into star schema
@@ -69,9 +69,29 @@
    - Convert the matrix into long form
    - Get metadata for each movie in a separate table
    - Make the metadata table in long form
-* TODO Implementation [0%] [0/3]
+* TODO Implementation [20%] [2/10]
 ** DONE GitHub repository
+- [[https://github.com/antononcube/Raku-DSL-English-DataAcquisitionWorkflows][DSL::English::DataAcquisitionWorkflows]]
 ** DONE Package structure
+- Implementation-wise.
+** TODO Metadata entities package [33%] [1/3]
+- [[https://github.com/antononcube/Raku-DSL-Entity-Metadata][DSL::Entity::Metadata]]
+- [X] First version of the metadata entities package.
+- [ ] Revised version with unit tests
+- [ ] Utilization in this package.
 ** TODO Main grammar
-** TODO Metadata entities package
-** TODO Data acquisition phrases
+- [ ] Recommendations
+- [ ] Recommendations by profile
+- [ ] Data ingredients query
+- [ ] Data quality query
+- [ ] Random data creation
+- [ ] Introspection query
+** TODO Data acquisition phrases [50%] [1/2]
+- [X] Reuse role generation code for [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::Enlish::FoodPreparationWorkflows]].
+- [ ] Edit and refine.
+** TODO Data ingredients query
+- Essential for recommendations by profile
+** TODO Data quality query
+** TODO Recommendations by history
+** TODO Recommendations by profile
+** TODO Introspection grammar
