--- a/org/DataAcquisitionWorkflows.org
+++ b/org/DataAcquisitionWorkflows.org
@@ -69,33 +69,51 @@
    - Convert the matrix into long form
    - Get metadata for each movie in a separate table
    - Make the metadata table in long form
-* TODO Implementation [20%] [2/10]
+* TODO Implementation [45%] [5/11]
 ** DONE GitHub repository
 - [[https://github.com/antononcube/Raku-DSL-English-DataAcquisitionWorkflows][DSL::English::DataAcquisitionWorkflows]]
 ** DONE Package structure
 - Implementation-wise.
-** TODO Metadata entities package [33%] [1/3]
+** TODO Metadata entities package [66%] [2/3]
 - [[https://github.com/antononcube/Raku-DSL-Entity-Metadata][DSL::Entity::Metadata]]
 - [X] First version of the metadata entities package.
 - [ ] Revised version with unit tests
-- [ ] Utilization in this package.
-** TODO Main grammar
-- [ ] Recommendations
-- [ ] Recommendations by profile
-- [ ] Data ingredients query
+- [X] Utilization in this package.
+** TODO Main grammar [66%] [4/6]
+- [X] Recommendations
+- [X] Recommendations by profile
+- [X] Data ingredients query
 - [ ] Data quality query
 - [ ] Random data creation
-- [ ] Introspection query
-** TODO Data acquisition phrases [50%] [1/2]
-- [X] Reuse role generation code for [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::Enlish::FoodPreparationWorkflows]].
-- [ ] Edit and refine.
-** TODO Data ingredients query
-- Essential for recommendations by profile
+- [X] Introspection query
+** DONE Data acquisition phrases [100%] [2/2]
+- [X] Reuse role generation code for [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::English::FoodPreparationWorkflows]].
+- [X] Edit and refine.
+** DONE Ingredients query [100%] [3/3]
+- Essential for recommendations by profile.
+- [X] Direct reuse of recommendations by profile from
+  [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::English::FoodPreparationWorkflows]].
+- [X] Inclusion of metadata entity names from [[https://github.com/antononcube/Raku-DSL-Entity-Metadata][DSL::Entity::Metadata]].
+- [X] More universal specifications:
+  - [X] Combination of metadata types and generic types
+  - [X] Allow phrases like:
+    : a dataset with both numerical and categorical data
+** DONE Introspection grammar
+- [X] Direct reuse of recommendations by profile from
+  [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::English::FoodPreparationWorkflows]].
+** TODO Recommendations by history [50%] [1/2]
+- [X] Handling of general recommendations commands.
+  - Which includes /implicitly/ the use of history.
+- [ ] Handling of recommendations commands for specific dataset
+  similarities.
+  - Datasets are specified by ID and/or unique name.
+** TODO Recommendations by profile [50%] [1/2]
+- [X] Direct reuse of recommendations by profile from
+  [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::English::FoodPreparationWorkflows]].
+- [ ] Refactored version.
+  - This is would be very useful for grammar debugging.
 ** TODO Data quality query
-** TODO Recommendations by history
-** TODO Recommendations by profile
-** TODO Introspection grammar
-** Leverage analogy with DSL::English::FoodPreparationWorkflows
+** Leverage analogy with [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::English::FoodPreparationWorkflows]]
 - Consider the following mapping / replacements:
   | Action   | FoodPreparationWorkflows   | DataAcquisitionWorkflows  |
   |----------+----------------------------+---------------------------|
@@ -117,5 +135,19 @@
   |          | <to-eat-phrase>            | <to-acquire-phrase>       |
   | redefine | <ingredient-spec>          |                           |
   | remove   | <allergic-reaction-phrase> |                           |
-
- 
+** TODO Unit tests [77%] [7/9]
+*** General
+- The test files reused and modified from
+  [[https://github.com/antononcube/Raku-DSL-English-FoodPreparationWorkflows][DSL::English::FoodPreparationWorkflows]] are marked with *FPW*.
+*** DONE Tests code generation from phrases
+- Made a Mathematica notebook that:
+  - Imports phrases from sources FPW
+  - Generate Raku tests code
+*** DONE Ingredients query commands                                   :FPW:
+*** DONE Introspection query commands                                 :FPW:
+*** DONE Recommendations by profile commands                          :FPW:
+*** DONE Recommendations commands                                     :FPW:
+*** DONE Sanity check tests                                           :FPW:
+*** DONE User-ID-specs-handling                                       :FPW:
+*** TODO Data quality commands
+*** TODO Random data generation commands
